--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       property="og:image"
       content="images/SpecialWeb"
     />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/" />
     <meta property="og:locale" content="ar_SY" />
     <meta property="og:site_name" content="SpecialWeb" />
     <meta name="author" content="Ahmad | SpecialWeb Team" />
@@ -196,3 +196,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
