--- a/works.html
+++ b/works.html
@@ -33,7 +33,7 @@
       property="og:image"
       content="images/518363679_122105966804933248_6233807796372465620_n.jpg"
     />
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="https://github.com/ahmedob2025/specialWep-company-site/blob/main/works.html" />
     <meta property="og:locale" content="ar_SY" />
     <!-- اللغة والبلد -->
     <meta property="og:site_name" content="SpecialWeb" />
@@ -186,3 +186,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
