--- a/section.html
+++ b/section.html
@@ -15,7 +15,7 @@
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية">
     <meta property="og:description" content="نحوّل أفكارك إلى موقع جذاب وسهل الاستخدام. ابدأ رحلتك معنا الآن.">
     <meta property="og:image" content="images/518363679_122105966804933248_6233807796372465620_n.jpg">
-    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/">
+    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/section.html">
     <meta property="og:locale" content="ar_SY"> <!-- اللغة والبلد -->
     <meta property="og:site_name" content="SpecialWeb"> <!-- اسم الموقع -->
     <meta name="author" content="Ahmad | SpecialWeb Team">
@@ -165,3 +165,4 @@
 </body>
 
 </html>
+
