--- a/section.html
+++ b/section.html
@@ -66,7 +66,7 @@
         <ul class="contact-list">
           <li>
             <!-- WhatsApp -->
-            <a href="https://wa.me201123272272/?text=مرحبًا%20أرغب%20بالحصول%20على%20لموقع%20جديد" target="_blank" rel="noopener noreferrer" class="btn btn-wa">
+            <a href="https://wa.me/201123272272/?text=مرحبًا%20أرغب%20بالحصول%20على%20لموقع%20جديد" target="_blank" rel="noopener noreferrer" class="btn btn-wa">
               <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path fill="currentColor" d="M20.52 3.48A11.76 11.76 0 0012 0C5.373 0 .046 5.327.046 11.95c0 2.106.548 4.173 1.588 6.016L0 24l6.19-1.586A11.902 11.902 0 0012 23.9c6.627 0 11.954-5.327 11.954-11.95 0-3.2-1.257-6.201-3.434-8.47zM12 21.6c-1.9 0-3.763-.5-5.366-1.44l-.383-.214-3.68.942.99-3.588-.25-.386A9.62 9.62 0 012.4 11.95 9.6 9.6 0 1112 21.6z"/></svg>
               واتساب / اتصال فوري
             </a>
@@ -165,4 +165,5 @@
 </body>
 
 </html>
+
 
