--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="images/SpecialWeb-removebg-preview.png" />
-    <meta name="theme-color" content="#006494" />
+    <meta name="theme-color" content="#071019" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية" />
     <meta
@@ -33,7 +33,7 @@
       property="og:image"
       content="images/SpecialWeb"
     />
-    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/" />
+    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/index.html" />
     <meta property="og:locale" content="ar_SY" />
     <meta property="og:site_name" content="SpecialWeb" />
     <meta name="author" content="Ahmad | SpecialWeb Team" />
@@ -71,6 +71,7 @@
         </div>
       </div>
     </header>
+
     <!-- end header -->
 
     <!-- start section  -->
@@ -78,9 +79,12 @@
       <div class="hero">
         <div class="hero-img">
           <img
-            src="images/hero-img0.jpg"
+            src="images/hero-img0-webp.webp"
             alt="image-hero"
           />
+        </div>
+        <div class="hero-img-mobile">
+          <img src="images/hero-img.webp" alt="">
         </div>
         <div class="hero-info">
           <div class="container">
@@ -120,16 +124,16 @@
           <div class="img">
             <img
             class="none-img"
-              src="images/518363679_122105966804933248_6233807796372465620_n.jpg"
+              src="images/518363679_122105966804933248_6233807796372465620_n-webp.webp"
               alt="image-index-1"
             />
             <img
-              src="images/23637177_desktop_with_3d_screen_web_design_mockup_0512-removebg-preview_LE_upscale_ultra_x4_size_of_changes_10_intensity_10_light_ai_30-removebg-preview.png"
+              src="images/spcialWeb_Serves1-removebg-preview.webp"
               alt="image-index-2"
             />
             <img
               class="none-img"
-              src="images/517947538_122105961422933248_3846001626807907658_n.jpg"
+              src="images/517947538_122105961422933248_3846001626807907658_n-webp.webp"
               alt="image-index-3"
             />
           </div>
@@ -144,7 +148,7 @@
         <div class="sw-footer__brand">
           <div class="sw-logo-wrap">
             <img style="border-radius: 50%;"
-              src="images/SpecialWeb.png"
+              src="images/logoSpecialWep.webp"
               alt="شعار SpecialWeb"
               class="sw-logo-img"
             />
@@ -196,4 +200,3 @@
     <script src="js/script.js"></script>
   </body>
 </html>
-
