--- a/serves.html
+++ b/serves.html
@@ -22,7 +22,7 @@
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="images/SpecialWeb-removebg-preview.png" />
-    <meta name="theme-color" content="#006494" />
+    <meta name="theme-color" content="#071019" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية" />
     <meta
@@ -86,7 +86,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/spcialWeb_Serves1.png"
+                  src="images/spcialWeb_Services1-webp.webp"
                   class="card-img-top"
                   alt="خدمة 1"
                 />
@@ -102,7 +102,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/specialWeb_Servies2.png"
+                  src="images/specialWeb_Servies2-webp.webp"
                   class="card-img-top"
                   alt=" 2 خدمة"
                 />
@@ -118,7 +118,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/specialWeb_Servies3.webp"
+                  src="images/specialWeb_Servies3-webp.webp"
                   class="card-img-top"
                   alt="3 خدمة"
                 />
@@ -136,7 +136,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/services.jpg"
+                  src="images/services-webp.webp"
                   class="card-img-top"
                   alt="خدمة4 "
                 />
@@ -154,7 +154,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/servies5.webp"
+                  src="images/services5-webp.webp"
                   class="card-img-top"
                   alt="خدمة5 "
                 />
@@ -172,7 +172,7 @@
             <div class="col-lg-4">
               <div class="card">
                 <img
-                  src="images/servies6.jpg"
+                  src="images/services6-webp.webp"
                   class="card-img-top"
                   alt="خدمة 6"
                 />
@@ -201,7 +201,7 @@
             <div class="carousel-inner text-center">
               <div class="carousel-item active card">
                 <img
-                  src="images/spcialWeb_Serves1.png"
+                  src="images/spcialWeb_Services1-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 1"
                 />
@@ -213,7 +213,7 @@
               </div>
               <div class="carousel-item card">
                 <img
-                  src="images/services.jpg"
+                  src="images/services-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 2"
                 />
@@ -227,7 +227,7 @@
               </div>
               <div class="carousel-item card">
                 <img
-                  src="images/specialWeb_Servies3.webp"
+                  src="images/specialWeb_Servies3-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 3"
                 />
@@ -263,7 +263,7 @@
             <div class="carousel-inner text-center">
               <div class="carousel-item active card">
                 <img
-                  src="images/servies4.jpg"
+                  src="images/services4-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 4"
                 />
@@ -275,7 +275,7 @@
               </div>
               <div class="carousel-item card">
                 <img
-                  src="images/servies5.webp"
+                  src="images/services5-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 5"
                 />
@@ -289,7 +289,7 @@
               </div>
               <div class="carousel-item card">
                 <img
-                  src="images/servies6.jpg"
+                  src="images/services6-webp.webp"
                   class="d-block w-100"
                   alt="خدمة 6"
                 />
@@ -329,7 +329,7 @@
         <div class="sw-footer__brand">
           <div class="sw-logo-wrap">
             <img style="border-radius: 50%;"
-              src="images/SpecialWeb.png"
+              src="images/logoSpecialWep.webp"
               alt="شعار SpecialWeb"
               class="sw-logo-img"
             />
@@ -381,4 +381,3 @@
     <script src="js/script.js"></script>
   </body>
 </html>
-
