--- a/auto.html
+++ b/auto.html
@@ -22,7 +22,7 @@
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="images/SpecialWeb-removebg-preview.png" />
-    <meta name="theme-color" content="#006494" />
+    <meta name="theme-color" content="#071019" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية" />
     <meta
@@ -104,21 +104,21 @@
           <div class="row justify-content-center">
             <div class="col-4 mb-3">
               <img
-                src="images/auto1.png"
+                src="images/auto1-webp.jpg"
                 class="img-fluid rounded shadow"
                 alt="auto-img-1"
               />
             </div>
             <div class="col-4 mb-3">
               <img
-                src="images/auto2.png"
+                src="images/auto2-webp.webp"
                 class="img-fluid rounded shadow"
                 alt="auto-img-2"
               />
             </div>
             <div class="col-4 mb-3">
               <img
-                src="images/auto3.png"
+                src="images/auto3-webp.webp"
                 class="img-fluid rounded shadow"
                 alt="auto-img-3"
               />
@@ -133,7 +133,7 @@
         <div class="sw-footer__brand">
           <div class="sw-logo-wrap">
             <img style="border-radius: 50%;"
-              src="images/SpecialWeb.png"
+              src="images/logoSpecialWep.webp"
               alt="شعار SpecialWeb"
               class="sw-logo-img"
             />
@@ -185,5 +185,3 @@
     <script src="js/script.js"></script>
   </body>
 </html>
-
-
