--- a/works.html
+++ b/works.html
@@ -22,7 +22,7 @@
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="images/SpecialWeb-removebg-preview.png" />
-    <meta name="theme-color" content="#006494" />
+    <meta name="theme-color" content="#071019" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية" />
     <meta
@@ -33,7 +33,7 @@
       property="og:image"
       content="images/518363679_122105966804933248_6233807796372465620_n.jpg"
     />
-    <meta property="og:url" content="https://github.com/ahmedob2025/specialWep-company-site/blob/main/works.html" />
+    <meta property="og:url" content="https://ahmedob2025.github.io/specialWep-company-site/works.html" />
     <meta property="og:locale" content="ar_SY" />
     <!-- اللغة والبلد -->
     <meta property="og:site_name" content="SpecialWeb" />
@@ -86,10 +86,10 @@
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
           <div class="video-container" onclick="loadVideo(this, '0lM7IfSafLM')">
-            <img src="images/logo-01.png" alt="مشروع المحامي محمد عثمان" />
+            <img src="images/logo-01-webp.webp" alt="مشروع المحامي محمد عثمان" />
             <div class="play-button">▶</div>
           </div>
-          <h3 class="project-title">⚖ صفحة تعريفية لمكتب المحامي محمد عثمان</h3>
+          <h3 class="project-title">⚖ صفحة تعريفية لمكتب محامي</h3>
           <p class="project-desc">موقع احترافي يعرّف بالمحامي محمد عثمان وخدماته القانونية، يعرض السيرة، مجالات الخبرة، وطرق التواصل بشكل واضح وسهل للزوار والموكلين المحتملين.</p>
          <a class="project-link" href="http://mohamedothman.com" target="_blank" rel="noopener noreferrer">🔗 فتح المشروع</a>
         </div>
@@ -99,7 +99,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
           <div class="video-container" onclick="loadVideo(this, 'pGp7MyeviSc')">
-            <img src="images/logo-removebg-preview (1).png" alt="مشروع BlueTech التدريبي" />
+            <img src="images/logo-blueTeck-webp.webp" alt="مشروع BlueTech التدريبي" />
             <div class="play-button">▶</div>
           </div>
           <h3 class="project-title">💻 مشروع تدريبي BlueTech</h3>
@@ -112,7 +112,7 @@
       <div class="col-md-6 col-lg-4">
         <div class="project-card">
           <div class="video-container" onclick="loadVideo(this, '_-pfNQ4qhEw')">
-            <img src="images/logo_lujmah.png" alt="مشروع Luqmah التدريبي" />
+            <img src="images/logo_lujmah-webp.webp" alt="مشروع Luqmah التدريبي" />
             <div class="play-button">▶</div>
           </div>
           <h3 class="project-title">🍽 مشروع تدريبي Luqmah</h3>
@@ -134,7 +134,7 @@
         <div class="sw-footer__brand">
           <div class="sw-logo-wrap">
             <img style="border-radius: 50%;"
-              src="images/SpecialWeb.png"
+              src="images/logoSpecialWep.webp"
               alt="شعار SpecialWeb"
               class="sw-logo-img"
             />
@@ -186,4 +186,3 @@
     <script src="js/script.js"></script>
   </body>
 </html>
-
