--- a/section.html
+++ b/section.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="تصميم مواقع, برمجة مواقع, شركة تصميم, تطوير ويب, مواقع احترافية, واجهات مستخدم, تجربة المستخدم, استضافة مواقع, تحسين محركات البحث, SEO, شركة تقنية, خدمات رقمية">
     <meta name="robots" content="index, follow">
     <link rel="icon" href="images/SpecialWeb-removebg-preview.png"> 
-    <meta name="theme-color" content="#006494">
+    <meta name="theme-color" content="#071019">
     <meta property="og:type" content="website">
     <meta property="og:title" content="SPECIALWEB - تصميم مواقع احترافية">
     <meta property="og:description" content="نحوّل أفكارك إلى موقع جذاب وسهل الاستخدام. ابدأ رحلتك معنا الآن.">
@@ -54,7 +54,7 @@
       </div>
     </header>
     <!-- end header -->
-    <!-- end header -->
+
     <!-- start section  -->
 <section id="contact" dir="rtl" style="font-family: system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;">
             <h1>تواصل معنا</h1>
@@ -112,7 +112,7 @@
         <div class="sw-footer__brand">
           <div class="sw-logo-wrap">
             <img style="border-radius: 50%;"
-              src="images/SpecialWeb.png"
+              src="images/logoSpecialWep.webp"
               alt="شعار SpecialWeb"
               class="sw-logo-img"
             />
@@ -163,7 +163,4 @@
     <script src="js/bootstrap.js" ></script>
     <script src="js/script.js"></script>
 </body>
-
 </html>
-
-
