--- a/section.html
+++ b/section.html
@@ -37,7 +37,7 @@
             <li><a href="index.html">الرئيسية</a></li>
             <li><a href="serves.html">خدماتنا</a></li>
             <li><a href="auto.html">من نحن</a></li>
-            <li><a href="works.html">معرض الاعمال</a></li>
+            <li><a href="works.html">معرض الأعمال</a></li>
             <li><a href="section.html">تواصل معنا</a></li>
           </ul>
         </nav>
@@ -164,3 +164,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
