--- a/serves.html
+++ b/serves.html
@@ -56,7 +56,7 @@
             <li><a href="index.html">الرئيسية</a></li>
             <li><a href="serves.html">خدماتنا</a></li>
             <li><a href="auto.html">من نحن</a></li>
-            <li><a href="works.html">معرض الاعمال</a></li>
+            <li><a href="works.html">معرض الأعمال</a></li>
             <li><a href="section.html">تواصل معنا</a></li>
           </ul>
         </nav>
@@ -381,3 +381,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
