--- a/works.html
+++ b/works.html
@@ -57,7 +57,7 @@
             <li><a href="index.html">الرئيسية</a></li>
             <li><a href="serves.html">خدماتنا</a></li>
             <li><a href="auto.html">من نحن</a></li>
-            <li><a href="works.html">معرض الاعمال</a></li>
+            <li><a href="works.html">معرض الأعمال</a></li>
             <li><a href="section.html">تواصل معنا</a></li>
           </ul>
         </nav>
@@ -76,7 +76,7 @@
     <!-- end header -->
     <!-- end header -->
     <div class="works">
-      <h1 class="section-title"> معرض أعمال</h1>
+      <h1 class="section-title"> اعمالنا </h1>
       <div class="container">
     <p class="section-desc">مجموعة من المشاريع التي تم تنفيذها باحترافية، تشمل صفحات تعريفية وتدريبية، مع فيديو توضيحي لكل مشروع.</p>
 
@@ -186,3 +186,4 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
