--- a/works.html
+++ b/works.html
@@ -76,7 +76,7 @@
     <!-- end header -->
     <!-- end header -->
     <div class="works">
-      <h1 class="section-title"> اعمالنا </h1>
+      <h1 class="section-title"> أعمالنا </h1>
       <div class="container">
     <p class="section-desc">مجموعة من المشاريع التي تم تنفيذها باحترافية، تشمل صفحات تعريفية وتدريبية، مع فيديو توضيحي لكل مشروع.</p>
 
@@ -186,4 +186,5 @@
     <script src="js/script.js"></script>
   </body>
 </html>
+
 
